# labbox_backend

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.debug.yml  mypy.ini  pyproject.toml
.github/workflows/: publish_docker.yml  test.yml
LabBox_APIs/: Samples View Metadata.bru  bruno.json  collection.bru
data/: countries.csv
src/app/: __init__.py  config.py  constants.py  db.py  logs.py  main.py  models.py  upload_models.py
src/app/importers/: import_gpas.py  import_spreadsheet.py
src/app/migrations/: env.py
src/app/migrations/versions/: 14a2313333c1_add_views_for_samples_specimens_runs_.py  30977c91922f_storage_table.py  3fa077bb79a8_start.py  5ce093d2a6a5_refactor_storage.py  5fb8a9b2fea7_mutations_and_unique_constraints.py  65638549e2b6_add_country_entries.py  74f145bf0bdc_flatten_specimen_details.py  85ef6de80849_dependant_views_need_to_be_recreated.py  88c11dd071fc_changed_unique_constaint_for_specimen_.py  8a13068d82dc_lookup_data.py  8c1afc2aa455_auditing_versioning_of_tables.py  9914ba1a02f5_triggers.py  ac41a312c0cd_extra_sample_fields_and_countries.py  c1d15eeed4f0_get_view_metadata.py  c695f567c4f1_add_batch_name_to_analyses.py  e045b65392ef_add_specimen_details_type_entries.py  f01fce5ded1d_nullable_sub_species_and_analysis_date_.py  f4183f1d16d9_flatten_other_details.py  f7e573c00e6b_other_types_lookup_data.py  fa75ffba1cf6_flatten_sample_details.py
src/app/routes/: mutation_routes.py  samples_routes.py  schema_routes.py  spreadsheet_routes.py  summary_routes.py
src/app/tests/: conftest.py  import_spreadsheet_testing_data.py  test_import_spreadsheet.py  test_import_spreadsheet_owners.py  test_import_spreadsheet_runs.py  test_import_spreadsheet_samples.py  test_import_spreadsheet_specimen_details.py  test_import_spreadsheet_specimens.py
src/app/utils/: auth.py  auth0.py  utils.py
